[gd_scene load_steps=33 format=3 uid="uid://xn6nhv4kc0lf"]

[ext_resource type="Script" path="res://Scripts/EnemyScripts/FarwayEnemies/scr_gorog.gd" id="1_bfsqs"]
[ext_resource type="Texture2D" uid="uid://bcwyp7atpwu7m" path="res://Scripts/GameScripts/Shadows/spr_shadow_r12.png" id="2_ut5r2"]
[ext_resource type="Texture2D" uid="uid://cvjogw318t2h2" path="res://Sprites/GUISprites/EnemyGUI/spr_healthbar_enemy.png" id="3_mhyul"]
[ext_resource type="Texture2D" uid="uid://bpdkjgb0xdwfa" path="res://Sprites/GUISprites/EnemyGUI/spr_healthbar_enemy_fill.png" id="4_ut68w"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/GeneralEnemy/scr_healthbar_enemy.gd" id="5_1so0t"]
[ext_resource type="Texture2D" uid="uid://by07iwkn47nyy" path="res://Sprites/EnemySprites/spr_enemy_gorog.png" id="6_vleb2"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/GeneralEnemy/scr_enemy_sprite.gd" id="7_mxkmc"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/FarwayEnemies/scr_gorog_slash.gd" id="8_33vkm"]
[ext_resource type="AudioStream" uid="uid://lygsusjeso34" path="res://Audio/EnemyAudio/snd_skirmisher_slash.mp3" id="9_bk87b"]
[ext_resource type="Script" path="res://Scripts/EnemyScripts/FarwayEnemies/scr_gorog_knifethrow.gd" id="10_7oyfl"]
[ext_resource type="AudioStream" uid="uid://bkctl01akyku0" path="res://Audio/EnemyAudio/snd_skirmisher_damaged.wav" id="11_jsfp2"]

[sub_resource type="Shader" id="Shader_b7b28"]
resource_local_to_scene = true
code = "shader_type canvas_item;

//uniform sampler2D screen_texture: hint_screen_texture;
uniform vec4 hurt_color: source_color = vec4(0.6,0.2,0.2,1.0);
uniform float blink_intensity = 0;
uniform bool is_hurt = false;


void fragment() {
	//Get Screen Color
	//vec4 screen_color = texture(screen_texture,SCREEN_UV);
	//Sample Sprite Color
	if (is_hurt == true){
		vec4 sprite_color = texture(TEXTURE,UV);
		sprite_color = mix(sprite_color,hurt_color,blink_intensity * sprite_color.a);
		COLOR = sprite_color;
	}
}

"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cd5b5"]
resource_local_to_scene = true
shader = SubResource("Shader_b7b28")
shader_parameter/hurt_color = Color(0.6, 0.2, 0.2, 1)
shader_parameter/blink_intensity = 0.0
shader_parameter/is_hurt = false

[sub_resource type="Animation" id="Animation_yjxgr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_bxqsa"]
resource_name = "anim_run_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_sjcyo"]
resource_name = "anim_idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_aymi0"]
resource_name = "anim_idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_mox5i"]
resource_name = "anim_idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3u6gx"]
resource_name = "anim_idle_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_kilnf"]
resource_name = "anim_run_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_f7tht"]
resource_name = "anim_run_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_wyoui"]
resource_name = "anim_run_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5it5c"]
_data = {
"RESET": SubResource("Animation_yjxgr"),
"anim_idle_down": SubResource("Animation_sjcyo"),
"anim_idle_left": SubResource("Animation_3u6gx"),
"anim_idle_right": SubResource("Animation_mox5i"),
"anim_idle_up": SubResource("Animation_aymi0"),
"anim_run_down": SubResource("Animation_wyoui"),
"anim_run_left": SubResource("Animation_f7tht"),
"anim_run_right": SubResource("Animation_bxqsa"),
"anim_run_up": SubResource("Animation_kilnf")
}

[sub_resource type="Animation" id="Animation_byxpr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3l53d"]
resource_name = "anim_hurt_blink"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.843137, 0.0235294, 0.145098, 0.498039), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k2x4x"]
_data = {
"RESET": SubResource("Animation_byxpr"),
"anim_hurt_blink": SubResource("Animation_3l53d")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6p7tm"]
size = Vector2(7, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grp8a"]
size = Vector2(5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eiyot"]
size = Vector2(9, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_nexmf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_33kqs"]
radius = 96.0

[sub_resource type="CircleShape2D" id="CircleShape2D_em0np"]
radius = 135.0

[node name="Gorog" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 16
collision_mask = 273
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_bfsqs")

[node name="ShadowSprite" type="Sprite2D" parent="."]
show_behind_parent = true
texture = ExtResource("2_ut5r2")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -5.0
offset_top = 1.0
offset_right = 5.0
offset_bottom = 4.0
value = 50.0
texture_under = ExtResource("3_mhyul")
texture_progress = ExtResource("4_ut68w")
script = ExtResource("5_1so0t")

[node name="EnemySprite" type="Sprite2D" parent="."]
clip_children = 2
material = SubResource("ShaderMaterial_cd5b5")
texture = ExtResource("6_vleb2")
offset = Vector2(0, -8)
hframes = 20
vframes = 20
script = ExtResource("7_mxkmc")

[node name="ColorRect" type="ColorRect" parent="EnemySprite"]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5it5c")
}

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k2x4x")
}

[node name="Movebox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_6p7tm")

[node name="Attack1Area" type="Area2D" parent="."]
visible = false
position = Vector2(6, -4)
rotation = 1.5708
collision_layer = 64
collision_mask = 2
script = ExtResource("8_33vkm")

[node name="Attack1Timer" type="Timer" parent="Attack1Area"]
wait_time = 1.5

[node name="Attack1SFX" type="AudioStreamPlayer" parent="Attack1Area"]
stream = ExtResource("9_bk87b")
volume_db = -25.0
pitch_scale = 0.5

[node name="Attack1AudioTimer" type="Timer" parent="Attack1Area"]
wait_time = 0.25
one_shot = true

[node name="Attack1Damagebox" type="CollisionShape2D" parent="Attack1Area"]
position = Vector2(-0.5, 9.53674e-07)
shape = SubResource("RectangleShape2D_grp8a")

[node name="Attack2Area" type="Area2D" parent="."]
visible = false
position = Vector2(6, -4)
rotation = 1.5708
collision_layer = 64
collision_mask = 2
script = ExtResource("10_7oyfl")

[node name="Attack2Timer" type="Timer" parent="Attack2Area"]
one_shot = true

[node name="Attack2SFX" type="AudioStreamPlayer" parent="Attack2Area"]
stream = ExtResource("9_bk87b")
volume_db = -25.0
pitch_scale = 0.5

[node name="Attack2AudioTimer" type="Timer" parent="Attack2Area"]
wait_time = 0.25
one_shot = true

[node name="Attack2Damagebox" type="CollisionShape2D" parent="Attack2Area"]
position = Vector2(-0.5, 9.53674e-07)
shape = SubResource("RectangleShape2D_grp8a")

[node name="HitArea" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 4

[node name="Hitbox" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_eiyot")

[node name="Navigation" type="Node2D" parent="."]
visible = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_desired_distance = 8.0
target_desired_distance = 8.0
path_postprocessing = 1

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.25
autostart = true

[node name="Attack1Detect" type="Area2D" parent="Navigation"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="Attack1DetectCircle" type="CollisionShape2D" parent="Navigation/Attack1Detect"]
rotation = 1.5708
shape = SubResource("CircleShape2D_nexmf")

[node name="Attack2Detect" type="Area2D" parent="Navigation"]
collision_layer = 0
collision_mask = 2

[node name="Attack2DetectCircle" type="CollisionShape2D" parent="Navigation/Attack2Detect"]
rotation = 1.5708
shape = SubResource("CircleShape2D_33kqs")

[node name="AggroDetect" type="Area2D" parent="Navigation"]
collision_layer = 0
collision_mask = 2

[node name="AggroDetectCircle" type="CollisionShape2D" parent="Navigation/AggroDetect"]
shape = SubResource("CircleShape2D_em0np")

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_jsfp2")
volume_db = -5.0

[connection signal="timeout" from="Attack1Area/Attack1AudioTimer" to="." method="_on_attack1_audio_timer_timeout"]
[connection signal="timeout" from="Attack2Area/Attack2Timer" to="." method="_on_attack2_timer_timeout"]
[connection signal="timeout" from="Attack2Area/Attack2AudioTimer" to="." method="_on_attack1_audio_timer_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="Navigation/Attack1Detect" to="." method="_on_attack1_detect_area_entered"]
[connection signal="area_exited" from="Navigation/Attack1Detect" to="." method="_on_attack1_detect_area_exited"]
[connection signal="area_entered" from="Navigation/Attack2Detect" to="." method="_on_attack2_detect_area_entered"]
[connection signal="area_exited" from="Navigation/Attack2Detect" to="." method="_on_attack2_detect_area_exited"]
[connection signal="area_entered" from="Navigation/AggroDetect" to="." method="_on_aggro_detect_area_entered"]
